logs/app.log
2026-01-23 14:12:43,951 ERROR: Exception on / [GET] [en C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\app.py", line 378, in inicio
    return render_template('inicio.html')
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\Gabriel\informes-automotor\templates\inicio.html", line 191, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Unexpected end of template. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2026-01-31 11:48:06,295 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 11:55:19,473 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:01:07,278 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:05:52,547 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:09:38,154 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 16:08:02,438 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:02:49,869 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:03:59,189 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:04:41,635 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:05:02,973 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:13:44,446 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:14:33,257 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:16:43,519 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:18:37,440 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:19:21,754 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:20:06,787 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:22:27,635 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:24:23,409 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:45:00,929 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:51:34,874 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:52:24,696 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:53:24,702 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 19:09:58,134 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
